[FIX] mail: fix style of mention suggestion
Use the same style in full composer than in small composer.

Tweak style to account for small device, better handle overflows

task-5916878

X-original-commit: 8c99b17fcc3a612fd897da9ee29e2f53254d5933

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -212,3 +212,7 @@
 .o-mail-Composer-pickerContainer.o-active {
     height: 50vh;
 }
+
+.o-mail-Composer-suggestionPartner-name.o-has-email {
+    max-width: 70%;
+}
